Fix question mark spacing issue

--- a/client/src/app/pages/profile/user-profile/profile-section/profile-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/profile-section/profile-section.component.scss
@@ -32,6 +32,12 @@
     background: white;
     padding: 25px 20px;
     border-bottom: 1px solid map-get($md-cfaccent, 50);
+    .question-container {
+      @include flex(row, flex-start, flex-start);
+      img.question {
+        margin: 5px 0 0 10px;
+      }
+    }
     .btn-container {
       text-align: center;
       padding: 10px 0;
